<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.bitblox.android.app.worklifebalance.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_starttime" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/input_starttime"
                android:layout_width="match_parent"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:hint="07:45" />

            <Button
                android:id="@+id/button_now"
                android:layout_width="match_parent"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/label_now" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_pauselength" />

        <TextView
            android:id="@+id/input_pauselength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:hint="00:30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_worklength" />

        <TextView
            android:id="@+id/input_worklength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:hint="08:15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_endtime" />

        <TextView
            android:id="@+id/output_endtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:text="16:30" />

    </LinearLayout>

</RelativeLayout>
